[package]
name = "notfeed"
version = "0.1.0"
edition = "2018"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
license = "GPL-2.0"
description = "Turn GitHub into an RSS reader."
homepage = "https://github.com/NotCraft/NotFeed"
repository = "https://github.com/NotCraft/NotFeed"
keywords = ["shell", "server", "rss"]

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

rss = { version = "1.0", features = ["with-serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls"] }

actix-web = { version = "3", features = ["rustls"] }

clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"

rhai = "1.0"
fs_extra = "1.2.0"

tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.handlebars]
version = "4.1.2-alpha.0"
features = ["script_helper", "dir_source"]
git = "https://github.com/sunng87/handlebars-rust.git"
rev = "d487756468f54a2dfd82f1e39b1424ce0b10ce1b"