[package]
name = "notfeed"
version = "0.2.3"
edition = "2018"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
license = "GPL-2.0"
description = "Turn GitHub into an RSS reader."
homepage = "https://github.com/NotCraft/NotFeed"
repository = "https://github.com/NotCraft/NotFeed"
keywords = ["shell", "server", "rss"]
exclude = [".github"]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

html-minifier = "3"

chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

rss = { version = "1.0", features = ["with-serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"] }

tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }

clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"

rhai = "1.0"
fs_extra = "1.2.0"

tracing = "0.1"
tracing-subscriber = "0.2"

html-escape = "0.2"
handlebars = { version = "4.1.2", features = ["script_helper", "dir_source"] }
handlebars_misc_helpers = { version = "0.12.1", default-features = false, optional = true }

lazy_static = "1.4"
pcre2 = { version = "0.2", optional = true }
katex = { version = "0.4.0-alpha.1", optional = true }
latex2mathml = { version = "0.2", optional = true }
v_latexescape = { version = "0.12.1", optional = true }

[features]
default = ["texml_render"]
misc_helpers = [
    "handlebars_misc_helpers/json",
    "handlebars_misc_helpers/jsonnet",
    "handlebars_misc_helpers/string",
    "handlebars_misc_helpers/http_reqwest"
]
texml_render = ["latex2mathml", "v_latexescape"]
katex_render = ["katex", "pcre2"]


[dev-dependencies]
cargo-husky = "1"