[package]
name = "notfeed"
version = "0.2.10"
edition = "2021"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
license = "GPL-2.0"
description = "Turn GitHub into an RSS reader."
homepage = "https://github.com/NotCraft/NotFeed"
repository = "https://github.com/NotCraft/NotFeed"
keywords = ["shell", "server", "rss"]
exclude = [".github"]

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
regex = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"

html-minifier = "3"

chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

rss = { version = "2.0", features = ["with-serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"] }

tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }

clap = { version = "4", features = ["derive", "cargo"] }

rhai = "1"
fs_extra = "1.2.0"

tracing = "0.1"
tracing-subscriber = "0.3"

html-escape = "0.2"
handlebars = { version = "4", features = ["script_helper", "dir_source"] }

lazy_static = "1.4"
latex2mathml = "0.2"
v_latexescape = "0.14"

[dev-dependencies]
cargo-husky = "1"